lavfi/select: correctly set prev_t and prev_pts

In particular, fix trac ticket #2248.